<resources>
    <string name="app_name">Notebook</string>
    <string name="toDoListFragment">Affairs</string>
    <string name="notesListFragment">Notes</string>
    <string name="shoppingListFragment">Purchases</string>
    <string name="title">header</string>
    <string name="description">Description</string>
    <string name="please_fill_out_all_fields">Please fill in the required fields</string>
    <string name="action_yes">YES</string>
    <string name="action_no">NO</string>
    <string name="default_alert_message">Do you want to delete?</string>
    <string name="empty_value">Value is empty</string>
    <string name="save_in_documents">save to file</string>
    <string name="name_of_file">enter file name</string>
    <string name="file_save">The file will be saved in the documents folder</string>
    <string name="success_save">Successfully saved</string>
    <string name="not_file">a file with that name has been deleted or moved</string>
    <string name="reminder">set a reminder</string>
    <string name="event">Event</string>
    <string name="delete_event">delete event</string>
    <string name="error_priorety">change the priority of the scheduled task to HIGH</string>
    <string name="edit_note">editor</string>
    <string name="delete_note">delete note</string>
    <string name="add_note">create a new</string>
    <string name="remote_from_file">restore from file</string>
    <string name="save">Save</string>
    <string name="successfully_added">Successfully added!</string>
    <string name="volume_setup">Schedule a Purchase</string>
    <string name="name_of_product">Name of product</string>
    <string name="default_alert_shop">Remove a product from the list?</string>
    <string name="schedule_an_event">Schedule an event</string>
    <string name="action_confirm">Add</string>
    <string name="undefined_error">Undefined error</string>
    <string name="create_data">added</string>
    <string name="planned">Schedule</string>
    <string-array name="priorities">
        <item>Choose a priority</item>
        <item>High priority</item>
        <item>Low priority</item>
        <item>no priority</item>
    </string-array>
    <string-array name="navigation_list">
        <item>Notes</item>
        <item>Archive</item>
        <item>Reminders</item>
        <item>Basket</item>
        <item>Uncategorized</item>
    </string-array>
    <string-array name="sortable_columns_human_readable">
        <item>Title</item>
        <item>Creation date</item>
        <item>Last modification date</item>
        <item>Reminder date</item>
    </string-array>
    <string-array name="checked_items_behavior">
        <item>Keep position</item>
        <item>Move to the end of the list</item>
        <item>Move to the end of unchecked items</item>
    </string-array>
    <string name="colors_app">Application color scheme</string>
    <string name="colors_widget">Widget color scheme</string>
    <string-array name="attachments_actions">
        <item>Share</item>
        <item>Delete</item>
        <item>Delete All</item>
        <item>Edit</item>
    </string-array>
    <string-array name="checked_items_behavior_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="sortable_columns">
        <item>title</item>
        <item>creation</item>
        <item>last_modification</item>
        <item>alarm</item>
    </string-array>
    <string-array name="colors_app_values">
        <item>disabled</item>
        <item>strip</item>
        <item>list</item>
        <item>complete</item>
    </string-array>
    <string name="title_item_list">Notes</string>
    <string name="title_activity_list">Omni Notes</string>
    <string name="search">Search</string>
    <string name="search_hint">Search in notes</string>
    <string name="content">Content</string>
    <string name="share">Share</string>
    <string name="undo">Undo</string>
    <string name="trash">Trash</string>
    <string name="trash_action">Trash</string>
    <string name="trashed">trashed</string>
    <string name="note_trashed">Note(s) trashed</string>
    <string name="note_untrashed">Note(s) restored from trash</string>
    <string name="untrash">Restore from trash</string>
    <string name="delete">Delete</string>
    <string name="note_deleted">Note(s) deleted permanently</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Restore from archive</string>
    <string name="creation">Created:</string>
    <string name="last_update">Updated:</string>
    <string name="delete_note_confirmation">Confirm note deletion?</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string name="failed">failed</string>
    <string name="cancel">Cancel</string>
    <string name="note_updated">Note updated</string>
    <string name="empty_note_not_saved">Can\'t save an empty note</string>
    <string name="empty_note_not_shared">Can\'t share an empty note</string>
    <string name="note_doesnt_exist">Note doesn\'t exists anymore</string>
    <string name="note_archived">Note archived</string>
    <string name="note_unarchived">Note restored from archive</string>
    <string name="note">Note</string>
    <string name="share_message_chooser">Share with</string>
    <string name="shared_content_sign">\n【by Omni Notes】</string>
    <string name="sort">Sort</string>
    <string name="select_sorting_column">Sort by</string>
    <string name="tap_to_undo">Tap to undo</string>
    <string name="alarm_set_on">Reminder set for</string>
    <string name="starting_from">starting from</string>
    <string name="at_time">at</string>
    <string name="discard_changes">Discard changes</string>
    <string name="attachment">Attachment</string>
    <string name="camera">Camera</string>
    <string name="delete_selected_image">Delete selected attachment?</string>
    <string name="delete_all_attachments">Delete all the attachments?</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="location_set_high_accuracy">Please set Location mode to high accuracy to continue</string>
    <string name="timestamp">Timestamp</string>
    <string name="pushbullet">Pushbullet</string>
    <string name="remove_location">Remove location?</string>
    <string name="remove_reminder">Remove reminder?</string>
    <string name="add_reminder">Add reminder</string>
    <string name="location_not_found">Location not found</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="no_app_to_handle_intent">No applications to handle file</string>
    <string name="storage_not_available">Storage not available</string>
    <string name="video">Video</string>
    <string name="feature_not_available_on_this_device">Feature unavailable on this device, sorry</string>
    <string name="error_occurred_deleting_note">Error while deleting note</string>
    <string name="no_backups_available">No backups available</string>
    <string name="data_export_message">Insert backup name</string>
    <string name="data_import_message">Restore</string>
    <string name="data_import_message_warning">WARNING: This will replace all current data!</string>
    <string name="data_export_completed">Data backup completed</string>
    <string name="data_export_failed">Data backup failed: check logcat for details</string>
    <string name="data_import_completed">Data restore completed</string>
    <string name="click_to_refresh_application">Click to refresh application</string>
    <string name="backup_existing">Backup already exists. It\'ll be overwritten</string>
    <string name="tag">Tag</string>
    <string name="tags">Tags</string>
    <string name="add_tag">Add tags</string>
    <string name="select_tags">Select tag(s)</string>
    <string name="categories">Categories</string>
    <string name="edit_tag">Edit category</string>
    <string name="add_category">Add category</string>
    <string name="category_title">Title</string>
    <string name="category_description">Description</string>
    <string name="category_color">Color</string>
    <string name="category_saved">Category saved</string>
    <string name="category_deleted">Category deleted</string>
    <string name="category_missing_title">Category title missing</string>
    <string name="delete_this_category">Delete this category</string>
    <string name="category">Category</string>
    <string name="categorize_as">Categorize as</string>
    <string name="title_activity_category">Edit category</string>
    <string name="delete_unused_category_confirmation">Confirm category deletion?</string>
    <string name="delete_category_confirmation">This category is used by some notes.\nConfirm notes un-categorization and category deletion?</string>
    <string name="discard">Discard</string>
    <string name="remove_category">Remove category</string>
    <string name="no_tags_created">No tags available yet\nCreate them by writing hashtags into your notes</string>
    <string name="no_categories_created">No categories have been created yet</string>
    <string name="notes_category_removed">Category removed from notes</string>
    <string name="notes_categorized_as">Notes categorized as</string>
    <string name="insert_security_password">Insert password</string>
    <string name="lock">Lock</string>
    <string name="save_note_to_lock_it">Save note to lock it</string>
    <string name="save_note_to_unlock_it">Save note to unlock it</string>
    <string name="unlock">Unlock</string>
    <string name="title_activity_password">Edit security password</string>
    <string name="title_activity_about">Info</string>
    <string name="deleted">deleted</string>
    <string name="no_items_in_list">Nothing here!</string>
    <string name="checklist_on">Enable checklist</string>
    <string name="checklist_off">Disable checklist</string>
    <string name="checklist_moveToBottom">Move checked items to bottom</string>
    <string name="checklist_item_hint">New item</string>
    <string name="remove_checklist">Remove checklist?</string>
    <string name="checklist_keep_checked">Keep checked items</string>
    <string name="checklist_keep_symbols">Keep check marks</string>
    <string name="sketch">Sketch</string>
    <string name="crash_dialog_text">Something went wrong in Omni Notes\nSend automatic report to developer?</string>
    <string name="crash_dialog_comment_prompt">Insert comment here (optional):</string>
    <string name="crash_toast">Something went wrong in Omni Notes\nA report has been sent report to the developer!</string>
    <string name="new_update_available">A new version of Omni Notes is available, would you like to update?</string>
    <string name="update">Update and rate!</string>
    <string name="not_now">Not now</string>
    <string name="title_activity_sketch">Sketch</string>
    <string name="redo">Redo</string>
    <string name="colors">Colors</string>
    <string name="stroke">Stroke</string>
    <string name="erase_sketch">Erase sketch?</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="saturation">Saturation</string>
    <string name="contracted_view">Reduced view</string>
    <string name="expanded_view">Expanded view</string>
    <string name="merge">Merge</string>
    <string name="empty_trash">Empty trash</string>
    <string name="synchronize">Synchronize</string>
    <string name="select_all">Select all</string>
    <string name="filter_old_reminders">Hide old reminders</string>
    <string name="remove_filter_old_reminders">Show old reminders</string>
    <string name="filter_archived">Hide archived notes</string>
    <string name="remove_filter_archived">Show archived notes</string>
    <string name="checklist">Checklist</string>
    <string name="settings">Settings</string>
</resources>