<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_baseline_setting"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="always"
        tools:visible="true" />
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter_white_24dp"
        android:orderInCategory="150"
        android:title="@string/filter_old_reminders"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_filter_remove"
        android:icon="@drawable/ic_filter_remove_white_24dp"
        android:orderInCategory="150"
        android:title="@string/remove_filter_old_reminders"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_filter_category"
        android:icon="@drawable/ic_filter_white_24dp"
        android:orderInCategory="150"
        android:title="@string/filter_archived"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_filter_category_remove"
        android:icon="@drawable/ic_filter_remove_white_24dp"
        android:orderInCategory="150"
        android:title="@string/remove_filter_archived"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="175"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_category"
        android:icon="@drawable/ic_folder_special_white_24dp"
        android:orderInCategory="200"
        android:title="@string/category"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_uncomplete_checklists"
        android:icon="@drawable/ic_format_list_checks_white_24dp"
        android:orderInCategory="225"
        android:title="@string/checklist"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_tags"
        android:icon="@drawable/ic_loyalty_white_24dp"
        android:orderInCategory="250"
        android:title="@string/tags"
        android:visible="false"
        app:showAsAction="always"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_add_reminder"
        android:orderInCategory="250"
        android:title="@string/add_reminder"
        android:visible="false"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:orderInCategory="300"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_merge"
        android:icon="@drawable/ic_call_merge_white_24dp"
        android:orderInCategory="400"
        android:title="@string/merge"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_archive"
        android:icon="@drawable/ic_archive_white_24dp"
        android:orderInCategory="1000"
        android:title="@string/archive"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_unarchive"
        android:icon="@drawable/ic_unarchive_white_24dp"
        android:orderInCategory="1000"
        android:title="@string/unarchive"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/ic_delete_black_48dp"
        android:orderInCategory="1100"
        android:title="@string/trash"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_untrash"
        android:icon="@drawable/ic_undelete_white_24dp"
        android:orderInCategory="1100"
        android:title="@string/untrash"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_cancel_white_24dp"
        android:orderInCategory="1200"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:orderInCategory="600"
        android:title="@string/sort"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true">
        <menu />
    </item>
    <item
        android:id="@+id/menu_expanded_view"
        android:orderInCategory="800"
        android:title="@string/expanded_view"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_contracted_view"
        android:orderInCategory="800"
        android:title="@string/contracted_view"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_synchronize"
        android:orderInCategory="850"
        android:title="@string/synchronize"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true"/>
    <item
        android:id="@+id/menu_empty_trash"
        android:orderInCategory="900"
        android:title="@string/empty_trash"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true"/>


</menu>
