<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainNoteBookActivity">

    <LinearLayout
        android:id="@+id/select_container_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/select_tabs"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="4dp"
            android:layout_weight="7"
            app:tabIndicator="@drawable/shape_tab_layout"
            app:tabIndicatorColor="@color/sapphire"
            app:tabIndicatorGravity="stretch"
            app:tabRippleColor="@color/white"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="@color/light_slate_grey">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toDoListFragment" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notesListFragment"
                android:textAllCaps="true" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoppingListFragment"
                android:textAllCaps="true" />

        </com.google.android.material.tabs.TabLayout>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:layout_margin="@dimen/size_small"
            android:layout_weight="1"
            android:background="@drawable/ic_baseline_more_vert_24"
            android:visibility="gone" />


    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"/>

</LinearLayout>