<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_notes_rec_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.notes.CreateNotesFragment">


    <ScrollView
        android:id="@+id/editor_todo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/size_xxx_large">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp">

            <EditText
                android:id="@+id/todo_title"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/current_priorities_spinner" />

            <Spinner
                android:id="@+id/current_priorities_spinner"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:entries="@array/priorities"
                android:paddingHorizontal="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/todo_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:paddingHorizontal="24dp"
                android:paddingTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_error" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="*"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="*"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/ll_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/dialog_error_background_red"
                android:drawablePadding="@dimen/size_xx_medium"
                android:paddingHorizontal="@dimen/size_medium"
                android:paddingVertical="@dimen/size_xx_small"
                android:text="@string/please_fill_out_all_fields"
                android:textSize="@dimen/text_size_standard"
                android:visibility="gone"
                app:drawableStartCompat="@drawable/ic_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>





        <com.owl_laugh_at_wasted_time.simplenotepad.ui.castomview.ColorPickerView
            android:id="@+id/colorPicturesToDo"
            android:layout_marginTop="@dimen/size_xx_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/indicator_color"
        android:layout_width="@dimen/size_large"
        android:layout_height="@dimen/size_large"
        android:layout_gravity="end"
        app:borderWidth="0dp"
        android:layout_marginTop="@dimen/size_medium"
        android:layout_marginEnd="@dimen/size_medium" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>

